# fcoreutils

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Fcoreutils-hackathon-submission.md  PROGRESS.md  README.md  REVIEW-PR75.md  SECURITY.md  build.rs  instructions.md  libcheck_write.rlib  research-reference.md  sonar-project.properties
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bandit.yml  claude-code-review.yml  claude.yml  codeql.yml  devskim.yml  docker.yml  osv-scanner.yml  pre-merge.yml  release.yml  scorecard.yml  semgrep.yml  sonar-setup.yml  sonarcloud.yml  test.yml  update-readme.yml
asm/: .gitignore  Makefile  build_unified.py
asm/arch/: Makefile  farch_unified.s
asm/arch/tests/: run_tests.sh
asm/arch/tools/: farch.s
asm/base64/unified/: fbase64_unified.asm
asm/cut/tests/: test_fcut.sh
asm/cut/unified/: fcut_unified.asm
asm/echo/: Makefile  fecho_unified.asm
asm/echo/lib/: args.asm  str.asm
asm/echo/tests/: run_tests.sh
asm/echo/tools/: fecho.asm
asm/head/tests/: run_tests.sh
asm/head/tools/: fhead.asm
asm/head/unified/: fhead_unified.asm
asm/hostid/: .gitignore  fhostid_unified.asm
asm/hostid/lib/: args.asm  str.asm
asm/hostid/tools/: fhostid.asm
asm/include/: linux.inc
asm/lib/: io.asm
asm/logname/: .gitignore  Makefile  flogname_unified.asm
asm/logname/lib/: io.asm
asm/logname/tools/: flogname.asm
asm/md5sum/unified/: fmd5sum_unified.asm
asm/pwd/: .gitignore  Makefile  fpwd_unified.asm
asm/pwd/lib/: args.asm  str.asm
asm/pwd/tools/: fpwd.asm
asm/rev/unified/: frev_unified.asm
asm/sleep/: Makefile  fsleep_unified.asm
asm/sleep/lib/: str.asm
asm/sleep/tools/: fsleep.asm
asm/sync/: .gitignore  Makefile  fsync_unified.asm
asm/sync/include/: linux.inc
asm/sync/lib/: args.asm  io.asm  str.asm
asm/sync/tests/: run_tests.sh
asm/sync/tools/: fsync.asm
asm/tac/include/: macros.inc
asm/tac/tests/: run_tests.sh
asm/tac/unified/: ftac_unified.asm
asm/tail/include/: linux.inc
asm/tail/unified/: ftail_unified.asm
asm/tests/: test_fcut.sh  test_frev.sh  test_ftac.sh  test_ftr.sh  test_fwc.sh
asm/tools/: fbase64.asm  fcut.asm  fhead.asm  fmd5sum.asm  frev.asm  ftac.asm  ftail.asm  ftr.asm  fwc.asm
asm/tr/include/: macros.inc
asm/tr/tests/: run_tests.sh
asm/tr/unified/: ftr_unified.asm
asm/true/: Makefile  ftrue_unified.asm
asm/true/tests/: run_tests.sh
asm/true/tools/: ftrue.asm
asm/tty/: .gitignore  ftty_unified.asm
asm/tty/lib/: args.asm  io.asm  str.asm
asm/tty/tests/: run_tests.sh
asm/tty/tools/: ftty.asm
asm/unified/: fbase64_unified.asm  fcut_unified.asm  fhead_unified.asm  fmd5sum_unified.asm  frev_unified.asm  ftac_unified.asm  ftail_unified.asm  ftr_unified.asm  fwc_unified.asm
asm/wc/include/: macros.inc
asm/wc/lib/: io.asm
asm/wc/tools/: fwc.asm
asm/whoami/: .gitignore  fwhoami_unified.asm
asm/whoami/lib/: io.asm
asm/whoami/tools/: fwhoami.asm
assembly/: .gitignore  build_tool.py
assembly/arch/: farch_unified.s  release.ld
assembly/arch/include/: linux.inc  macros.inc
assembly/arch/lib/: args.s  io.s  str.s
assembly/arch/tests/: run_tests.sh  security_tests.py
assembly/arch/tools/: farch.s
assembly/base64/include/: linux.inc
assembly/base64/lib/: io.asm
assembly/base64/tests/: run_tests.sh  security_tests.py  test_fbase64.sh
assembly/base64/unified/: fbase64_unified.asm
assembly/cut/include/: linux.inc  macros.inc
assembly/cut/lib/: io.asm
assembly/cut/tests/: run_tests.sh  security_tests.py
assembly/cut/unified/: fcut_unified.asm
assembly/echo/: fecho_unified.asm
assembly/echo/lib/: args.asm  io.asm  str.asm
assembly/echo/tests/: run_tests.sh  security_tests.py
assembly/echo/tools/: fecho.asm
assembly/head/include/: linux.inc
assembly/head/lib/: io.asm
assembly/hostid/: Makefile  fhostid_unified.asm
assembly/logname/: flogname_unified.asm
assembly/pwd/: fpwd_unified.asm
assembly/sleep/: fsleep_unified.asm
assembly/sync/: fsync_unified.asm
assembly/true/: ftrue_unified.asm
assembly/tty/: Makefile  ftty_unified.asm
assembly/whoami/: Makefile  fwhoami_unified.asm
assembly/yes/: README.md  build.py  fyes.asm  fyes_arm64.s  fyes_macos_arm64.s
benches/: hash_benchmark.rs  wc_benchmark.rs
experiments/: EXPERIMENTS.md
scripts/: benchmark.sh  gnu_compat_test.sh
src/: lib.rs
src/base64/: core.rs  tests.rs
src/cat/: core.rs  tests.rs
src/chgrp/: core.rs  tests.rs
src/chmod/: core.rs  tests.rs
src/chown/: core.rs  tests.rs
src/comm/: core.rs  tests.rs
src/common/: io.rs  mod.rs
src/cp/: core.rs  tests.rs
src/csplit/: core.rs  tests.rs
src/cut/: core.rs  tests.rs
src/date/: core.rs  tests.rs
src/dd/: core.rs  tests.rs
src/df/: core.rs  tests.rs
src/du/: core.rs  tests.rs
src/echo/: core.rs  tests.rs
src/expand/: core.rs  tests.rs
src/expr/: core.rs  tests.rs
src/factor/: core.rs  tests.rs
src/fmt/: core.rs  tests.rs
src/fold/: core.rs  tests.rs
src/hash/: core.rs  tests.rs
src/head/: core.rs  tests.rs
src/install/: core.rs  tests.rs
src/join/: core.rs  tests.rs
src/ls/: cli.rs  core.rs  mod.rs  tests.rs
src/mv/: core.rs  tests.rs
src/nl/: core.rs  tests.rs
src/numfmt/: core.rs  tests.rs
src/od/: core.rs  tests.rs
src/paste/: core.rs  tests.rs
src/pinky/: core.rs  tests.rs
src/pr/: core.rs  tests.rs
src/printf/: core.rs  tests.rs
src/ptx/: core.rs  tests.rs
src/rev/: core.rs  tests.rs
src/rm/: core.rs  mod.rs  tests.rs
src/shred/: core.rs  tests.rs
src/sort/: compare.rs  core.rs  key.rs  mod.rs  tests.rs
src/split/: core.rs  tests.rs
src/stat/: core.rs  tests.rs
src/stdbuf/: core.rs  tests.rs
src/stty/: core.rs  tests.rs
src/tac/: core.rs  tests.rs
src/tail/: core.rs  tests.rs
src/test_cmd/: core.rs  tests.rs
src/tr/: charset.rs  core.rs  mod.rs  tests.rs
src/uniq/: core.rs  mod.rs  tests.rs
src/users/: core.rs  tests.rs
src/wc/: core.rs  tests.rs
src/who/: core.rs  tests.rs
(+83 files in other folders)
